changede color of ultima class
changed color of ultima class

--- a/css/style.css
+++ b/css/style.css
@@ -23,19 +23,19 @@ h2.focal{
 p.ultima{
     font-family: sans-serif;
     text-align: justify;
-    color: #7A686D;
+    color: #2D4A76;
     font-size; 18px;
 }
 h1.ultima{
     text-align: center;
-    color: #7A686D;
+    color: #2D4A76;
     font-family: sans-serif;
     font-size: 26px;
     font-weight: bold;
 }
 h2.ultima{
     text-align: center;
-    color: #7A686D;
+    color: #2D4A76;
     font-family: sans-serif;
     font-size: 20px;
 }
