--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@ body{
     width: 1000px;
     background-color: #191916;
 }
-
+#table td:hover{
+    background-color: #A13352;
+}
 #table div{
     margin: auto;
     width: 1000px ;
@@ -15,7 +17,9 @@ body{
 }
 #table table{
     background-color: #323539;
+    width: 1000px;
 }
+
 #table th, td{
     border: 0px;
     padding: 0px;
