--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
-body{
-    background-color: #191916;
+body, html{
+    height: 100%;
+    margin: 0;
+    background-image: url("images/musicbackground.jpg");
+    background-color: #676C75;
+    height: 100%; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 .center{
@@ -31,15 +39,32 @@ body{
     font-family: sans-serif;
     color: white;
 }
+
+#productheader{
+    background-color: darkslategrey;
+    color: white;
+}
+
+#product-info{
+    background-color:black;
+    widows: 200px;
+}
+
+#prodcut-picture{
+    background-color: #4E4346;
+    width: 800px;
+}
+
+.focal{
+     color: white;   
+}
 p.focal{
     font-family: sans-serif;
     text-align: justify;
-    color: #7A686D;
     font-size; 18px;
 }
 h1.focal{
     text-align: center;
-    color: #7A686D;
     font-family: sans-serif;
     font-size: 26px;
     font-weight: bold;
