Tride to giv all divs a background
Unsuccessfully tried put all of the divs inside of a div to add a background color to hide space betweed above and below the divs

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,12 @@ body{
    background-image: url(../images/musicbackground.jpg);
     background-color: #323539;
 }
-
+.background{
+    background-color: #191916;
+    width: 1000px;
+    height: auto;
+    margin: auto;
+}
 .center{
     margin: auto;
     width: 1000px;
