--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,15 @@ a:active{
     color: white;
 }
 
-#product-info{
-    background-color:black;
-    widows: 200px;
+#product{
+    font-family: sans-serif;
+    margin: auto;
+    width: 1000px;
+    padding: 0;
+    border: 0;
+    border-spacing: 0;
 }
 
-#prodcut-picture{
-    background-color: #4E4346;
-    width: 800px;
-}
 
 .focal{
     color: white; 
@@ -82,7 +82,6 @@ h1.focal{
 }
 h2.focal{
     text-align: center;
-    color: #7A686D;
     font-family: sans-serif;
     font-size: 20px;
 }
