Removed horizontal rules from product headers
Removed horizontal rules from product headers and added padding

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,8 @@ a:active{
 #productheader{
     background-color: darkslategrey;
     color: white;
+    padding: 10px;
+    width: auto;
 }
 
 #product-div{
